--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "mountpackaging",
   "version": "1.0.0",
   "description": "Company website for Mount Packaging Machinery Pvt. Ltd.",
-  "main": "index.js",
+  "main": "app/index.js",
   "scripts": {
     "test": "jest",
     "watchJs": "rimraf ./dist/main.js && webpack --mode development --config ./webpack.config.js --progress --profile --colors --watch",
-    "startJs": "rimraf ./dist/main.js && webpack-dev-server --mode development --config ./webpack.config.js --progress --profile --colors --watch",
+    "buildJs": "rimraf ./dist/main.js && webpack --mode production --config ./webpack.config.js --progress --profile --colors",
+    "startJs": "rimraf ./dist/main.js && webpack-dev-server --open --hot --mode development --config ./webpack.config.js --progress --profile --colors --watch",
     "buildAssets": "rimraf ./dist/app.css && gulp buildAssets",
     "watchAssets": "rimraf ./dist/app.css && gulp watchAssets",
     "dev": "concurrently npm:watchJs npm:watchAssets",
-    "start": "concurrently npm:startJs npm:watchAssets"
+    "start": "concurrently npm:startJs npm:watchAssets",
+    "build": "concurrently npm:buildJs npm:buildAssets"
   },
   "repository": {
     "type": "git",
@@ -28,13 +30,21 @@
     "@babel/preset-react": "^7.10.1",
     "babel-loader": "^8.1.0",
     "concurrently": "^5.2.0",
+    "css-loader": "^3.5.3",
     "gulp": "^4.0.2",
     "gulp-sass": "^4.1.0",
+    "html-loader": "^1.1.0",
+    "html-webpack-plugin": "^4.3.0",
     "jest": "^26.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.12.21",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
     "rimraf": "^3.0.2",
+    "sass": "^1.26.7",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
