--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "buildAssets": "rimraf ./dist/app.css && gulp buildAssets",
     "watchAssets": "rimraf ./dist/app.css && gulp watchAssets",
     "dev": "concurrently npm:watchJs npm:watchAssets",
-    "start": "concurrently npm:startJs npm:watchAssets",
+    "start": "concurrently npm:startJs npm:watchJs npm:watchAssets",
     "build": "concurrently npm:buildJs npm:buildAssets"
   },
   "repository": {
