--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/preset-env": "^7.10.1",
     "@babel/preset-react": "^7.10.1",
     "babel-loader": "^8.1.0",
+    "classnames": "^2.2.6",
     "concurrently": "^5.2.0",
     "css-loader": "^3.5.3",
     "gulp": "^4.0.2",
@@ -41,6 +42,7 @@
     "react-hot-loader": "^4.12.21",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
+    "react-test-renderer": "^16.13.1",
     "rimraf": "^3.0.2",
     "sass": "^1.26.7",
     "sass-loader": "^8.0.2",
