--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-hot-loader": "^4.12.21",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
+    "react-svg": "^11.0.24",
     "react-test-renderer": "^16.13.1",
     "rimraf": "^3.0.2",
     "sass": "^1.26.7",
