--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest --colors",
     "watchJs": "rimraf ./dist/main.js && webpack --mode development --config ./webpack.config.js --progress --profile --colors --watch",
     "buildJs": "rimraf ./dist/main.js && webpack --mode production --config ./webpack.config.js --progress --profile --colors",
-    "startJs": "rimraf ./dist/main.js && webpack-dev-server --open --hot --mode development --config ./webpack.config.js --progress --profile --colors --watch",
+    "startJs": "rimraf ./dist/main.js && webpack-dev-server --open --mode development --config ./webpack.config.js --progress --profile --colors --watch",
     "buildAssets": "rimraf ./dist/app.css && gulp buildAssets",
     "watchAssets": "rimraf ./dist/app.css && gulp watchAssets",
     "dev": "concurrently npm:watchJs npm:watchAssets",
@@ -42,9 +42,11 @@
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.0.1",
     "react": "^16.13.1",
+    "react-burger-menu": "^2.6.15",
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.12.21",
     "react-redux": "^7.2.0",
+    "react-responsive": "^8.1.0",
     "react-router-dom": "^5.2.0",
     "react-svg": "^11.0.24",
     "react-test-renderer": "^16.13.1",
