--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/core": "^7.10.1",
     "@babel/preset-env": "^7.10.1",
     "@babel/preset-react": "^7.10.1",
+    "@material-ui/core": "^4.11.0",
     "babel-jest": "^26.0.1",
     "babel-loader": "^8.1.0",
     "classnames": "^2.2.6",
