updates - using material ui grid components to make things easier

--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,11 @@
       "@babel/preset-env",
       {
         "targets": {
-          "node": "current"
+          "node": "current",
+          "browsers": [
+            "last 2 versions",
+            "ie >= 11"
+          ]
         }
       }
     ]
