--- a/package.json
+++ b/package.json
@@ -63,5 +63,22 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-redux": "^7.2.0"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less|scss)$": "<rootDir>/__mocks__/styleMock.js",
+      "^Components(.*)$": "<rootDir>/app/components$1",
+      "^Pages(.*)$": "<rootDir>/app/pages$1"
+    },
+    "setupFilesAfterEnv": [
+      "<rootDir>/setupTests.js"
+    ],
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
+    "transform": {
+      "^.+\\.js?$": "babel-jest"
+    }
   }
 }
