--- a/package.json
+++ b/package.json
@@ -25,9 +25,6 @@
   },
   "homepage": "https://github.com/pkestikar/mountPackaging#readme",
   "devDependencies": {
-    "@babel/core": "^7.10.1",
-    "@babel/preset-env": "^7.10.1",
-    "@babel/preset-react": "^7.10.1",
     "@material-ui/core": "^4.11.0",
     "babel-jest": "^26.0.1",
     "babel-loader": "^8.1.0",
@@ -59,10 +56,14 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@babel/core": "^7.10.1",
+    "@babel/preset-env": "^7.10.1",
+    "@babel/preset-react": "^7.10.1",
+    "history": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
-    "react-redux": "^7.2.0"
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0"
   },
   "jest": {
     "moduleNameMapper": {
